Hide nearby point labels to avoid cluttering the chart with overlapping numbers

--- a/src/app/module-viewer/assessment-chart/assessment-chart.component.sass
+++ b/src/app/module-viewer/assessment-chart/assessment-chart.component.sass
@@ -51,6 +51,9 @@
                 text
                     fill: #ddd
 
+            g.line-series.active g.datapoint-value
+                display: block !important
+
             g[ngx-charts-y-axis] + [clip-path]
                 g.ng-trigger-animationState
                     transform: translate(0, 0)
